--- a/demo.ipynb
+++ b/demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  MicroGrad demo\n",
+    "###  Minigrad demo\n",
     "https://github.com/karpathy/micrograd/"
    ]
   },
